Bug 440338 - KCM crashes on load
Summary: KCM crashes on load
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_powerdevil (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: VHI crash
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords: regression
: 446150 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-07-27 20:17 UTC by Nate Graham
Modified: 2021-12-22 18:20 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (3.85 KB, text/plain)
2021-12-22 18:20 UTC, joe.b.t.lunn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-07-27 20:17:20 UTC
bisected to 164f6175014313d18c13e129998c816303863ef1, which was supposed to fix Bug 440223. But I cannot test that because now the KCM crashes on load. :)


Backtrace:

Thread 1 "systemsettings5" received signal SIGSEGV, Segmentation fault.
0x00007ffff5bc1a84 in KConfigGroup::config() const () at /usr/include/qt5/QtCore/qbasicatomic.h:118
118         bool ref() noexcept { return Ops::ref(_q_value); }
Missing separate debuginfos, use: dnf debuginfo-install libXrender-0.9.10-14.fc34.x86_64 libdav1d-0.9.0-1.fc34.x86_64 libmng-2.0.3-13.fc34.x86_64 sssd-client-2.5.1-2.fc34.x86_64 svt-av1-libs-0.8.6-4.fc34.x86_64 xcb-util-wm-0.4.1-20.fc34.x86_64 xz-libs-5.2.5-5.fc34.x86_64
(gdb) bt
#0  0x00007ffff5bc1a84 in KConfigGroup::config() const ()
    at /usr/include/qt5/QtCore/qbasicatomic.h:118
#1  0x00007ffff5bc2ca7 in KConfigGroup::readEntry (this=this@entry=0x7fffffffcd40, 
    key=key@entry=0x7fff95f8f0de "profile", aDefault=...)
    at /home/nate/kde/src/kconfig/src/core/kconfiggroup.cpp:672
#2  0x00007fff95f8db41 in operator() (__closure=<optimized out>, watcher=0x7fffffffcd20)
    at /home/nate/kde/src/powerdevil/daemon/actions/bundled/powerprofileconfig.cpp:101
#3  0x00007ffff57a3c99 in QtPrivate::QSlotObjectBase::call (a=0x7fffffffcea0, r=<optimized out>, 
    this=0xeff160) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#4  doActivate<false> (sender=0xeff060, signal_index=3, argv=0x7fffffffcea0)
    at kernel/qobject.cpp:3886
#5  0x00007ffff579ec27 in QMetaObject::activate (sender=<optimized out>, 
    m=m@entry=0x7ffff5b94180 <QDBusPendingCallWatcher::staticMetaObject>, 
    local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fffffffcea0)
    at kernel/qobject.cpp:3946
#6  0x00007ffff5b74a53 in QDBusPendingCallWatcher::finished (this=<optimized out>, 
    _t1=<optimized out>) at .moc/moc_qdbuspendingcall.cpp:158
#7  0x00007ffff579a809 in QObject::event (this=0xeff060, e=0xef0ef0) at kernel/qobject.cpp:1314
#8  0x00007ffff63e9423 in QApplicationPrivate::notify_helper (this=<optimized out>, 
    receiver=0xeff060, e=0xef0ef0) at kernel/qapplication.cpp:3632
#9  0x00007ffff5770098 in QCoreApplication::notifyInternal2 (receiver=0xeff060, event=0xef0ef0)
    at kernel/qcoreapplication.cpp:1063
#10 0x00007ffff5773606 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, 
    data=0x423ef0) at kernel/qcoreapplication.cpp:1817
#11 0x00007ffff57c1bf7 in postEventSourceDispatch (s=0x53d260)
    at kernel/qeventdispatcher_glib.cpp:277
#12 0x00007ffff3cea4cf in g_main_dispatch (context=0x7fffdc005000) at ../glib/gmain.c:3337
#13 g_main_context_dispatch (context=0x7fffdc005000) at ../glib/gmain.c:4055
#14 0x00007ffff3d3e4e8 in g_main_context_iterate.constprop.0 (
    context=context@entry=0x7fffdc005000, block=block@entry=1, dispatch=dispatch@entry=1, 
    self=<optimized out>) at ../glib/gmain.c:4131
#15 0x00007ffff3ce7c03 in g_main_context_iteration (context=0x7fffdc005000, may_block=1)
    at ../glib/gmain.c:4196
#16 0x00007ffff57c1698 in QEventDispatcherGlib::processEvents (this=0x550db0, flags=...)
    at kernel/qeventdispatcher_glib.cpp:423
#17 0x00007ffff576eab2 in QEventLoop::exec (this=this@entry=0x7fffffffd2d0, flags=..., 
    flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#18 0x00007ffff5776fe4 in QCoreApplication::exec ()
    at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#19 0x00007ffff5d5bc60 in QGuiApplication::exec () at kernel/qguiapplication.cpp:1860
#20 0x00007ffff63e9399 in QApplication::exec () at kernel/qapplication.cpp:2824
#21 0x000000000040de1d in main (argc=<optimized out>, argv=0x7fffffffd3f0)
    at /home/nate/kde/src/systemsettings/app/main.cpp:208
Comment 1 Bug Janitor Service 2021-07-28 08:47:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/powerdevil/-/merge_requests/55
Comment 2 David Redondo 2021-07-28 13:37:41 UTC
Git commit 366a9c3102f0ecd21751892629f0cc43f49fcacb by David Redondo.
Committed on 28/07/2021 at 08:45.
Pushed by davidre into branch 'master'.

Fix crash if dbus call finishes before we have a valid config group

M  +5    -2    daemon/actions/bundled/powerprofileconfig.cpp

https://invent.kde.org/plasma/powerdevil/commit/366a9c3102f0ecd21751892629f0cc43f49fcacb
Comment 3 David Edmundson 2021-11-28 21:08:48 UTC
*** Bug 446150 has been marked as a duplicate of this bug. ***
Comment 4 joe.b.t.lunn 2021-12-22 18:20:54 UTC
Created attachment 144791 [details]
New crash information added by DrKonqi

systemsettings5 (5.23.4) using Qt 5.15.2

- What I was doing when the application crashed:
Opened KDE Settings (System Settings) > Opened Power Management > Crash Occured. 
Had recently "rebooted" the system using kexec before first seg fault but later recreated issue after logging in immediately.

There are no unusal power settings configured on this system. Though the disk geomtry is a bit funky but that is not related to this issue.

<3 KDE, thanks for the great window manager. Keep fighting the good fight! ttfn :D

-- Backtrace (Reduced):
#6  QComboBox::clear (this=0x558f22ccd730) at widgets/qcombobox.cpp:3049
#7  0x00007fc6b0d6a704 in operator() (__closure=0x558f22cc3980, watcher=0x7ffd70f65540) at /usr/src/debug/powerdevil5-5.23.4-1.1.x86_64/daemon/actions/bundled/powerprofileconfig.cpp:83
#8  0x00007fc6c698f043 in QtPrivate::QSlotObjectBase::call (a=0x7ffd70f656c0, r=0x7fc6b4013ac0, this=0x558f22cc3970) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#9  doActivate<false> (sender=0x558f22cc3870, signal_index=3, argv=0x7ffd70f656c0) at kernel/qobject.cpp:3886
[...]
#11 0x00007fc6c5499fff in QDBusPendingCallWatcher::finished (this=<optimized out>, _t1=<optimized out>) at .moc/moc_qdbuspendingcall.cpp:158