Fix crash if dbus call finishes before we have a valid config group

BUG:440338